--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -279,7 +279,7 @@
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
-      "maxWorkers": 3000,
+      "maxWorkers": 300,
       "maxNewWorkersPerCycle":50,
       "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 50,
@@ -291,6 +291,8 @@
       "submitter": {
 	  "nCore": 1,
           "nCorePerNode": 1,
+	  "nCoreFactor": 8,
+          "activateWorkerFactor": 0.042,
           "submitMode": "PULL",
 	  "ceQueueName": "rubin",
 	  "ceARCGridType": "arc",
@@ -305,7 +307,7 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 4000,
+    "maxWorkers": 400,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 50,
@@ -317,6 +319,8 @@
     "submitter": {
 	  "nCore": 1,
           "nCorePerNode": 1,
+	  "nCoreFactor": 8,
+          "activateWorkerFactor": 0.042,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -332,7 +336,7 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 3000,
+    "maxWorkers": 300,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 50,
@@ -344,6 +348,8 @@
     "submitter": {
 	  "nCore": 1,
           "nCorePerNode": 1,
+	  "nCoreFactor": 4,
+          "activateWorkerFactor": 0.083,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -359,7 +365,7 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 2500,
+    "maxWorkers": 300,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 50,
@@ -371,10 +377,41 @@
     "submitter": {
 	  "nCore": 1,
           "nCorePerNode": 1,
+	  "nCoreFactor": 2,
+          "activateWorkerFactor": 0.167,
           "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
+          "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
+                         "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+      }
+  },
+
+  "SLAC_Rubin_Big_Himem": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 300,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":200,
+    "nQueueLimitJobMin":100,
+    "nQueueLimitJob": 200,
+    "nQueueLimitWorker":200,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 1,
+          "activateWorkerFactor": 0.33,
+          "submitMode": "PULL",
+          "ceQueueName": "rubin_himem",
+          "ceARCGridType": "arc",
+          "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
@@ -435,58 +472,12 @@
       }
   },
 
-  "SLAC_Rubin_SDF": {
-    "queueStatus": "offline",
-    "prodSourceLabel": "managed",
-    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
-    "templateQueueName": "production.pull",
-    "maxWorkers": 700,
-    "maxNewWorkersPerCycle":20,
-    "nQueueLimitWorkerMin":1,
-    "nQueueLimitWorkerMax": 50,
-    "nQueueLimitJobMax":100,
-    "nQueueLimitJobMin":100,
-    "nQueueLimitJob": 100,
-    "nQueueLimitWorker":50,
-
-    "submitter": {
-          "ceQueueName": "rubin",
-          "ceARCGridType": "arc",
-	  "ceHostname": "sdfarcce001.slac.stanford.edu",
-          "ceEndpoint": "https://arcce1.slac.stanford.edu:9443/arex/rest/1.0",
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
-      }
-  },
-
-  "SLAC_Rubin_SDF_Big": {
-    "queueStatus": "offline",
-    "prodSourceLabel": "managed",
-    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
-    "templateQueueName": "production.push",
-    "maxWorkers": 500,
-    "maxNewWorkersPerCycle":10,
-    "nQueueLimitWorkerMin":1,
-    "nQueueLimitWorkerMax": 50,
-    "nQueueLimitJobMax":100,
-    "nQueueLimitJobMin":100,
-    "nQueueLimitJob": 100,
-    "nQueueLimitWorker":200,
-
-    "submitter": {
-          "ceQueueName": "rubin_himem",
-          "ceARCGridType": "arc",
-	  "ceHostname": "sdfarcce001.slac.stanford.edu",
-          "ceEndpoint": "https://arcce1.slac.stanford.edu:9443/arex/rest/1.0",
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push.sdf"
-      }
-  },
-
   "CC-IN2P3_TEST": {
       "queueStatus": "online",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
-      "maxWorkers": 3000,
+      "maxWorkers": 300,
       "maxNewWorkersPerCycle":50,
       "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 50,
@@ -496,6 +487,10 @@
       "nQueueLimitWorker":200,
 
       "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 8,
+          "activateWorkerFactor": 0.042,
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "ccarccelsst01.in2p3.fr",
@@ -509,7 +504,7 @@
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
-      "maxWorkers": 3000,
+      "maxWorkers": 400,
       "maxNewWorkersPerCycle":50,
       "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 50,
@@ -521,6 +516,8 @@
       "submitter": {
 	  "nCore": 1,
           "nCorePerNode": 1,
+	  "nCoreFactor": 8,
+          "activateWorkerFactor": 0.042,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -535,7 +532,7 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 3000,
+    "maxWorkers": 300,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 50,
@@ -547,6 +544,8 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
+	  "nCoreFactor": 4,
+          "activateWorkerFactor": 0.083,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -561,7 +560,7 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 2500,
+    "maxWorkers": 300,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 50,
@@ -573,10 +572,40 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
+	  "nCoreFactor": 2,
+          "activateWorkerFactor": 0.167,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "ccarccelsst01.in2p3.fr",
+          "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+      }
+  },
+
+  "CC-IN2P3_Rubin_Big_Himem": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 300,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":200,
+    "nQueueLimitJobMin":100,
+    "nQueueLimitJob": 200,
+    "nQueueLimitWorker":200,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 1,
+          "activateWorkerFactor": 0.33,
+          "submitMode": "PULL",
+          "ceQueueName": "lsst",
+          "ceARCGridType": "arc",
+          "ceHostname": "ccarccelsst01.in2p3.fr",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
@@ -639,7 +668,7 @@
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
-      "maxWorkers": 1000,
+      "maxWorkers": 300,
       "maxNewWorkersPerCycle":50,
       "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 50,
@@ -649,6 +678,10 @@
       "nQueueLimitWorker":200,
 
       "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 8,
+          "activateWorkerFactor": 0.042,
 	  "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel2.hec.lancs.ac.uk",
@@ -662,7 +695,7 @@
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
-      "maxWorkers": 1000,
+      "maxWorkers": 400,
       "maxNewWorkersPerCycle":20,
       "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 50,
@@ -674,6 +707,8 @@
       "submitter": {
 	  "nCore": 1,
           "nCorePerNode": 1,
+          "nCoreFactor": 8,
+          "activateWorkerFactor": 0.042,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -688,7 +723,7 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 3000,
+    "maxWorkers": 300,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 50,
@@ -700,6 +735,8 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
+	  "nCoreFactor": 4,
+          "activateWorkerFactor": 0.083,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -714,7 +751,7 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 2500,
+    "maxWorkers": 300,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 50,
@@ -726,10 +763,40 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
+	  "nCoreFactor": 2,
+          "activateWorkerFactor": 0.167,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
 	  "ceHostname": "grendel2.hec.lancs.ac.uk",
+          "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+      }
+  },
+
+  "LANCS_Rubin_Big_Himem": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 300,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":200,
+    "nQueueLimitJobMin":100,
+    "nQueueLimitJob": 200,
+    "nQueueLimitWorker":200,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 1,
+          "activateWorkerFactor": 0.33,
+          "submitMode": "PULL",
+          "ceQueueName": "grid",
+          "ceARCGridType": "arc",
+          "ceHostname": "grendel2.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
