no pilots when no activated jobs

--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -295,6 +295,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
 	  "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
 	  "ceQueueName": "rubin",
 	  "ceARCGridType": "arc",
@@ -323,6 +324,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -352,6 +354,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.083,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -381,6 +384,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.167,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
@@ -410,6 +414,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 0.33,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
@@ -493,6 +498,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
@@ -520,6 +526,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -548,6 +555,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.083,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -576,6 +584,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.167,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -604,6 +613,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 0.33,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -684,6 +694,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
 	  "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel2.hec.lancs.ac.uk",
@@ -711,6 +722,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -739,6 +751,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.083,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -767,6 +780,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.167,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -795,6 +809,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 0.33,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
