--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -293,6 +293,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
 	  "ceQueueName": "rubin",
 	  "ceARCGridType": "arc",
@@ -321,6 +322,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -350,6 +352,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.083,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -379,6 +382,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.167,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
@@ -408,6 +412,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 0.33,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
@@ -491,6 +496,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "ccarccelsst01.in2p3.fr",
@@ -518,6 +524,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -546,6 +553,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.083,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -574,6 +582,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.167,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -602,6 +611,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 0.33,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -682,6 +692,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
 	  "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel2.hec.lancs.ac.uk",
@@ -709,6 +720,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.042,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -737,6 +749,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.083,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -765,6 +778,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.167,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -793,6 +807,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 0.33,
+	  "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
