update queue config

--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -53,7 +53,9 @@
     "nQueues": 30,
     "lookupTime": 30,
     "maxNewWorkers": 1000,
-    "sleepTime": 10
+    "sleepTime": 10,
+    "activateWorkerFactor": "auto",
+    "noPilotsWhenNoActiveJobs": true
   },
   "monitor": {
     "nThreads": 10,
