--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -73,6 +73,7 @@
     ]
   },
   "cacher": {
+    "refreshInterval": 2,
     "data": [
       "resource_types.json||panda_server:get_resource_types",
       "job_statistics.json||panda_server:get_job_stats",
