update slac to use local ddm cric file

--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -329,7 +329,7 @@
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
 		         "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_slac.sdf"
       }
   },
 
@@ -359,7 +359,7 @@
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_slac.sdf"
       }
   },
 
@@ -389,7 +389,7 @@
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_slac.sdf"
       }
   },
 
@@ -419,7 +419,7 @@
           "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_slac.sdf"
       }
   },
 
@@ -446,7 +446,7 @@
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_96.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_slac_96.sdf"
       }
   },
 
@@ -473,7 +473,7 @@
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_slac.sdf"
       }
   },
 
