ATLASPANDA-863: Prepare SLAC prod iDDS DB for partitions on CNPG

--- a/rubin-panda-db-deploy/overlays/idds/prod/archive/cnpg-panda-idds-database.yaml
+++ b/rubin-panda-db-deploy/overlays/idds/prod/archive/cnpg-panda-idds-database.yaml
@@ -36,11 +36,13 @@ spec:
     reusePVC: true
 
   postgresql:
+    shared_preload_libraries: [ 'pg_cron', 'pg_partman_bgw' ]
     parameters:
-      shared_buffers: 16GB
+      shared_buffers: 32GB
       max_connections: "1000"
       pg_stat_statements.max: "10000"
       pg_stat_statements.track: all
+      work_mem: 128MB
 #      ldap:
 #        scheme: ldaps
 #        server: 'ldap-unix.slac.stanford.edu'
