--- a/rubin-panda-db-deploy/overlays/idds/prod/main/cnpg-panda-idds-database.yaml
+++ b/rubin-panda-db-deploy/overlays/idds/prod/main/cnpg-panda-idds-database.yaml
@@ -36,6 +36,7 @@ spec:
     reusePVC: true
 
   postgresql:
+    shared_preload_libraries: [ 'pg_cron', 'pg_partman_bgw' ]
     parameters:
       shared_buffers: 32GB
       max_connections: "1000"
